Replace `App.css` with Emotion components

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,11 @@ h1 {
   line-height: 1.1;
 }
 
+h1,
+p {
+  margin: unset;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -66,4 +71,11 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
